[package]
name = "dehashed-rs"
edition = "2021"
version = "0.1.0"
repository = "https://github.com/myOmikron/dehashed-rs"
authors = ["Niklas Pfister <git@omikron.dev>"]
license = "MPL-2.0"
description = "A rust library for the dehashed API"


[dependencies]
# HTTP library
reqwest = { version = "~0.11", features = ["json"] }

# Serialization library
serde = { version = "~1", features = ["derive"] }

# Logging framework
log = { version = "~0.4" }

# Async runtime
tokio = { version = ">=1.23.1", features = ["sync"], optional = true }

[build-dependencies]
rustc_version = { version = "~0.4" }

[dev-dependencies]
tokio = { version = ">=1.23", features = ["rt", "macros", "sync"] }
env_logger = { version = "~0.10" }

[features]
default = []
tokio = ["dep:tokio"]
