[package]
name = "dehashed-rs"
edition = "2021"
version = "0.2.0"
repository = "https://github.com/myOmikron/dehashed-rs"
authors = ["Niklas Pfister <git@omikron.dev>"]
license = "MPL-2.0"
description = "A rust library for the dehashed API"


[dependencies]
# HTTP library
reqwest = { version = "~0.11" }

# Serialization library
serde = { version = "~1", features = ["derive"] }
serde_json = { version = "~1" }

# Logging framework
log = { version = "~0.4" }

# Async runtime
tokio = { version = ">=1.23.1", features = ["sync"], optional = true }

[build-dependencies]
rustc_version = { version = "~0.4" }

[dev-dependencies]
tokio = { version = ">=1.23.1", features = ["rt-multi-thread", "macros", "sync"] }

[features]
default = []
tokio = ["dep:tokio"]

[[example]]
name = "simple"

[[example]]
name = "scheduler"
required-features = ["tokio"]